Re-Created the Mobile Header and Menu. And fixed some issues on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,17 @@
     box-sizing: border-box;
 }
 
+body,
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: Oswald, sans-serif;
     -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
+
     background-color: white;
+    width: 100vw;
 }
 
 input,
